syntax = "proto3";

package gameprotocol;

import "message_types.proto";

// Enveloppe ultra-compacte pour tous les messages
message MessageEnvelope {
  uint32 requestId = 1;
  MessageType type = 2;
  bytes payload = 3;
} 