syntax = "proto3";

package gameprotocol;

enum MessageType {
  MESSAGE_TYPE_UNKNOWN = 0;        // Anciennement UnknownType
  MESSAGE_TYPE_HELLO = 1;          // Anciennement HelloType
  MESSAGE_TYPE_ADD_PLAYER = 2;      // Anciennement AddPlayerType
  MESSAGE_TYPE_GET_PLAYER_LIST = 3; // Anciennement GetPlayerListType
  MESSAGE_TYPE_PLAYER_LIST = 4;     // Anciennement PlayerListType
} 